WIP: Converting to Kotlin because it works with Truffle annotations